--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3010,7 +3010,9 @@ input, select, textarea {
 		}
 
 		#header p {
-			margin: 1em 0 0 0;
+			/* margin: 1em 0 0 0; */
+			margin: auto;
+			padding: 0px 20px 0px 20px;
 		}
 
 		#header .actions {
